@@ -11,6 +11,11 @@ use warnings;
 
 use Rex::Pkg;
 use Rex::Logger;
+use Rex::Template;
+use Rex::Commands::File;
+use Rex::Hardware;
+
+use Data::Dumper;
 
 require Exporter;
 
@@ -38,6 +43,30 @@ sub install {
 
    }
 
+   elsif($type eq "file") {
+   
+      my $source = $option->{"source"};
+      
+      if($source =~ m/\.tpl$/) {
+         # das ist ein template
+
+         my $template = Rex::Template->new;
+         
+         my $content = eval { local(@ARGV, $/) = ($source); <>; };
+
+         my $vars = $option->{"template"};
+         my %merge1 = %{$vars || {}};
+         my %merge2 = Rex::Hardware->get(qw/ Host Kernel Memory Network Swap /);
+         my %template_vars = (%merge1, %merge2);
+
+         my $fh = file_write($package);
+         $fh->write($template->parse($content, \%template_vars));
+         $fh->close;
+      }
+
+   
+   }
+
    else {
       
       Rex::Logger::info("$type not supported.");
@@ -45,10 +74,34 @@ sub install {
 
    }
 
-
 }
 
 sub remove {
+
+   my ($type, $package, $option) = @_;
+
+
+   if($type eq "package") {
+
+      my $pkg = Rex::Pkg->get;
+
+      if($pkg->is_installed($package)) {
+         Rex::Logger::info("Removing $package.");
+         $pkg->remove($package);
+      }
+      else {
+         Rex::Logger::info("$package is not installed.");
+      }
+
+   }
+
+   else {
+      
+      Rex::Logger::info("$type not supported.");
+      exit 1;
+
+   }
+
 }
 
 1;
